--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <p>Good food. Good mood.</p>
       <button class="button" onclick="goToMenu()">Get Started →</button>
     </div>
-    <img src="C:\html/Food.png" alt="Food" class="Food" >
+    <img src="food.png" alt="Food" class="Food" >
   </section>
 
   <script>
