--- a/success.html
+++ b/success.html
@@ -44,7 +44,7 @@
   </style>
 </head>
 <body>
-  <img src="C:\html/Success_icon.png" alt="Success Icon" />
+  <img src="Success_icon.png" alt="Success Icon" />
   <h2>Your Order has been placed!</h2>
   <button onclick="backToHome()">Back to Home</button>
 
