--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <script>
     function goToMenu() {
-      window.location.href = "menu.html";
+      window.location.href = "Menu.html";
     }
   </script>
 </body>
